--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "dev": "npx tailwindcss -i ./config/assets/styles/tailwind-entry.css -o ./config/static/css/main.css --watch",
-    "build": "npx tailwindcss -i ./config/assets/styles/tailwind-entry.css -o ./config/static/css/main.css --minify"
+    "dev": "npx @tailwindcss/cli -i ./config/assets/styles/tailwind-entry.css -o ./config/static/css/main.css --watch",
+    "build": "npx @tailwindcss/cli -i ./config/assets/styles/tailwind-entry.css -o ./config/static/css/main.css --minify"
   },
   "devDependencies": {
-    "flowbite": "^2.5.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13"
+    "@tailwindcss/cli": "^4.0.0-beta.8",
+    "@tailwindcss/postcss": "^4.0.0-beta.8",
+    "flowbite": "^3.0.0-beta.1",
+    "tailwindcss": "^4.0.0-beta.8"
   }
 }
