--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,16 +9,16 @@ jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.12'
-        cache: 'pip'
-        cache-dependency-path: "requirements/*/**.txt"
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends postgresql-client
-        pip install -U -q pip-tools
-        pip-sync requirements/base/base.txt requirements/dev/dev.txt
-    - run: pytest
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: "pip"
+          cache-dependency-path: "requirements/*/**.txt"
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y --no-install-recommends postgresql-client
+          pip install -U -q pip-tools
+          pip-sync requirements/base/base.txt requirements/dev/dev.txt
+      - run: pytest
