--- a/requirements/base/base.in
+++ b/requirements/base/base.in
@@ -1,17 +1,19 @@
 anyio<4
 beautifulsoup4
 celery[redis]
-Django==5.1.4
+channels
+daphne
+Django==5.1.5
 django-allauth
 django-celery-beat
 django-email-bandit @ git+https://github.com/caktus/django-email-bandit@8d84bb5571e531946b46c63301b136f5369e149b
-channels
-daphne
 django-filter
 django-htmx
 django-storages
 django-structlog[celery]
 django-tables2
+django-template-partials
+django-widget-tweaks
 dj-database-url
 gspread
 gunicorn
