--- a/Dockerfile.dockerignore
+++ b/Dockerfile.dockerignore
@@ -40,3 +40,11 @@ Dockerfile
 Dockerfile.dockerignore
 Dockerfile.env
 pyproject.toml
+*ipynb
+htmlcov/
+setup.cfg
+docs/
+Makefile
+README.md
+.ruff_cache
+.github
