--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       - S3_ACCESS_KEY=${S3_ACCESS_KEY:-}
       - S3_SECRET_KEY=${S3_SECRET_KEY:-}
       - S3_BUCKET_NAME=${S3_BUCKET_NAME:-}
-    command: [ "wait-for-it", "${DB_HOST:-postgres14}:5432", "--", "./start-odk.sh" ]
+    command:
+      ["wait-for-it", "${DB_HOST:-postgres14}:5432", "--", "./start-odk.sh"]
   nginx:
     image: ghcr.io/caktus/central-nginx:v2024.3.1
     depends_on:
@@ -50,7 +51,7 @@ services:
       - "${HTTP_PORT:-80}:80"
       - "${HTTPS_PORT:-443}:443"
     healthcheck:
-      test: [ "CMD-SHELL", "nc -z localhost 80 || exit 1" ]
+      test: ["CMD-SHELL", "nc -z localhost 80 || exit 1"]
   enketo:
     image: ghcr.io/caktus/central-enketo:v2024.3.1
     volumes:
@@ -82,6 +83,8 @@ services:
       - dev_secrets:/etc/secrets
     working_dir: /etc/secrets
     command: /bin/sh -c 'echo "s0m3v3rys3cr3tk3y" > enketo-secret && echo "this $3cr3t key is crackable" > enketo-less-secret && echo "enketorules" > enketo-api-key'
+  pyxform:
+    image: "ghcr.io/getodk/pyxform-http:v3.0.0"
 volumes:
   dev_secrets:
   enketo-redis-main:
