--- a/.infisical.env
+++ b/.infisical.env
@@ -1,9 +1,9 @@
 # Required key for encryption/decryption ops. See https://infisical.com/docs/self-hosting/configuration/envars#param-encryption-key
-# THIS IS A SAMPLE ENCRYPTION KEY AND SHOULD NEVER BE USED FOR PRODUCTION
+# THIS IS A SAMPLE ENCRYPTION_KEY AND SHOULD NEVER BE USED FOR PRODUCTION
 ENCRYPTION_KEY=6c1fe4e407b8911c104518103505b218
 
 # Required secret to sign JWT tokens. See https://infisical.com/docs/self-hosting/configuration/envars#param-auth-secret
-# THIS IS A SAMPLE AUTH_SECRET KEY AND SHOULD NEVER BE USED FOR PRODUCTION
+# THIS IS A SAMPLE AUTH_SECRET AND SHOULD NEVER BE USED FOR PRODUCTION
 AUTH_SECRET=5lrMXKKWCVocS/uerPsl7V+TX/aaUaI7iDkgl3tSmLE=
 
 # Postgres creds
