--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: [main]
+    branches: [main, 4617-import-dagster]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
 
