--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,89 @@ line-length = 100
 [tool.dagster]
 module_name = "dagster_publish_mdm.definitions"
 code_location_name = "dagster_publish_mdm"
+
+[tool.uv.sources]
+django-email-bandit = { git = "https://github.com/caktus/django-email-bandit", rev = "8d84bb5571e531946b46c63301b136f5369e149b" }
+pyodk = { git = "https://github.com/getodk/pyodk.git", rev = "c20fbd36622fe3a309292b7f646bd7347858aaa6" }
+
+[project]
+name = "publish-mdm"
+version = "0.1.0"
+description = "Publish MDM is an open-source tool to manage devices and publish XLSForm templates from Google Sheets to ODK Central."
+readme = "README.md"
+requires-python = "~=3.12"
+dependencies = [
+    "anyio<4",
+    "beautifulsoup4==4.13.4",
+    "boto3==1.40.5",
+    "celery[redis]==5.5.3",
+    "channels==4.3.1",
+    "dagster==1.11.5",
+    "dagster-k8s==0.27.5",
+    "dagster-postgres==0.27.5",
+    "dagster-webserver==1.11.5",
+    "daphne==4.2.1",
+    "dj-database-url==3.0.1",
+    "django==5.2.2",
+    "django-allauth==65.10.0",
+    "django-celery-beat==2.8.1",
+    "django-email-bandit",
+    "django-filter==25.1",
+    "django-htmx==1.23.2",
+    "django-import-export[xls,xlsx]==4.3.9",
+    "django-invitations==2.1.0",
+    "django-storages==1.14.6",
+    "django-structlog[celery]==9.1.1",
+    "django-tables2==2.7.5",
+    "django-template-partials==25.1",
+    "django-widget-tweaks==1.5.0",
+    "gspread==6.2.1",
+    "gunicorn==23.0.0",
+    "infisicalsdk==1.0.9",
+    "markdown==3.8.2",
+    "newrelic==10.15.0",
+    "oauthlib==3.3.1",
+    "openpyxl==3.1.5",
+    "pillow==11.3.0",
+    "psycopg==3.2.9",
+    "pygments==2.19.2",
+    "pyjwt==2.10.1",
+    "pyodk",
+    "python-dotenv==1.1.1",
+    "requests==2.32.3",
+    "requests-oauthlib==2.0.0",
+    "requests-ratelimiter==0.7.0",
+    "segno==1.6.6",
+    "sentry-sdk==2.34.1",
+    "slippers==0.6.2",
+    "whitenoise==6.9.0",
+]
+
+[dependency-groups]
+dev = [
+    "black==25.1.0",
+    "django-browser-reload==1.18.0",
+    "django-debug-toolbar==6.0.0",
+    "django-types==0.22.0",
+    "django-watchfiles==1.1.0",
+    "djlint==1.36.4",
+    "factory-boy==3.3.3",
+    "jupyterlab==4.4.5",
+    "moto[s3]==5.1.9",
+    "pre-commit==4.2.0",
+    "pytest==8.4.1",
+    "pytest-cov==6.2.1",
+    "pytest-django==4.11.1",
+    "pytest-mock==3.14.1",
+    "pytest-responses==0.5.1",
+    "requests-mock==1.12.1",
+]
+docs = [
+    "shibuya>=2025.8.16",
+    "sphinx>=8.2.3",
+    "sphinx-autobuild>=2024.10.3",
+    "sphinx-contributors>=0.2.7",
+    "sphinx-copybutton>=0.5.2",
+    "sphinxcontrib-googleanalytics>=0.5",
+    "sphinxcontrib-mermaid>=1.0.0",
+]
