Revert "Test docker-publish GA workflow."
This reverts commit a2a5f7b85e27c5cb7dc9a5d075cd8494b32dc184.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: [main, 4752-switch-to-uv]
+    branches: [main]
     # Publish semver tags as releases.
     tags: ["v*.*.*"]
 
