--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,18 +64,18 @@ readme = "README.md"
 requires-python = "~=3.12.0"
 dependencies = [
     "anyio<4",
-    "beautifulsoup4==4.13.4",
-    "boto3==1.40.5",
+    "beautifulsoup4==4.13.5",
+    "boto3==1.40.16",
     "celery[redis]==5.5.3",
     "channels==4.3.1",
-    "dagster==1.11.5",
-    "dagster-k8s==0.27.5",
-    "dagster-postgres==0.27.5",
-    "dagster-webserver==1.11.5",
+    "dagster==1.11.7",
+    "dagster-k8s==0.27.7",
+    "dagster-postgres==0.27.7",
+    "dagster-webserver==1.11.7",
     "daphne==4.2.1",
     "dj-database-url==3.0.1",
     "django==5.2.2",
-    "django-allauth==65.10.0",
+    "django-allauth==65.11.0",
     "django-celery-beat==2.8.1",
     "django-email-bandit",
     "django-filter==25.1",
@@ -91,7 +91,7 @@ dependencies = [
     "gunicorn==23.0.0",
     "infisicalsdk==1.0.9",
     "markdown==3.8.2",
-    "newrelic==10.15.0",
+    "newrelic==10.16.0",
     "oauthlib==3.3.1",
     "openpyxl==3.1.5",
     "pillow==11.3.0",
@@ -104,7 +104,7 @@ dependencies = [
     "requests-oauthlib==2.0.0",
     "requests-ratelimiter==0.7.0",
     "segno==1.6.6",
-    "sentry-sdk==2.34.1",
+    "sentry-sdk==2.35.0",
     "slippers==0.6.2",
     "whitenoise==6.9.0",
 ]
@@ -118,10 +118,11 @@ dev = [
     "django-watchfiles==1.1.0",
     "djlint==1.36.4",
     "factory-boy==3.3.3",
-    "jupyterlab==4.4.5",
-    "moto[s3]==5.1.9",
-    "pre-commit==4.2.0",
+    "jupyterlab==4.4.6",
+    "moto[s3]==5.1.11",
+    "pre-commit==4.3.0",
     "pytest==8.4.1",
+    "pytest-asyncio==1.1.0",
     "pytest-cov==6.2.1",
     "pytest-django==4.11.1",
     "pytest-mock==3.14.1",
