--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,20 +25,20 @@ jobs:
           - 5432:5432
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Install uv and set the Python version
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: "3.12"
-          cache: "pip"
-          cache-dependency-path: "requirements/*/**.txt"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
       - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends postgresql-client
-          pip install -U -q pip-tools
-          pip-sync requirements/base/base.txt requirements/dev/dev.txt
+          uv sync --locked
       - name: Run pre-commit
-        run: pre-commit run --all-files
+        run: uv run pre-commit run --all-files
       - name: Run tests
-        run: pytest
+        run: uv run pytest
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
