--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,9 @@ dependencies = [
     "django-tables2==2.7.5",
     "django-template-partials==25.1",
     "django-widget-tweaks==1.5.0",
+    "google-api-python-client==2.187.0",
+    "google-auth==2.40.3",
+    "google-auth-httplib2==0.2.1",
     "gspread==6.2.1",
     "gunicorn==23.0.0",
     "infisicalsdk==1.0.9",
